# rayfloat

./: .gitignore  CMakeLists.txt  README.md
docs/: blog.md
include/: aabb.h  bvh.h  camera.h  hittable.h  hittable_list.h  material.h  ray.h  sphere.h  vec3.h
src/: main.cpp
